# akai-widget

./: .gitignore  CMakeLists.txt  README.md  install.sh
.omo/run-continuation/: ses_13d87c0b9ffeGwjWYjoJ8eeiBE.json
.playwright-mcp/: page-2026-06-10T19-47-55-258Z.yml  page-2026-06-10T19-49-45-856Z.yml
package/: metadata.json
package/contents/code/: processmanager.cpp  processmanager.h  storagehelper.cpp  storagehelper.h
package/contents/config/: main.xml
package/contents/ui/: ChatEngine.qml  ChatView.qml  ConnectionManager.qml  InputBar.qml  MessageBubble.qml  ModelSelector.qml  StatusIndicator.qml  Theme.qml  UsageDashboard.qml  UsageTracker.qml  main.qml  utils.js
package/contents/ui/metering/: MeterBar.qml  MeterLabel.qml  MeterPanel.qml  MeterRing.qml  Sparkline.qml  qmldir
tests/: mock_server.py  run_tests.sh  tst_utils.js
